# fictional-articlehub

./: .env.docker  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
app/: admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_userprofile_managers_alter_userprofile_email.py
django_course/: settings.py  urls.py
locale/es/LC_MESSAGES/: django.po
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: field.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app/layouts/: base_form.html
templates/registration/: login.html
